syntax = "proto3";

package proto_product;

option go_package = "github.com/vsespontanno/eCommerce/internal/proto/product";

service Products {
  rpc GetProductByID (GetProductByIDRequest) returns (GetProductByIDResponse);
  rpc GetProducts (GetProductsByIDRequest) returns (GetProductsByIDResponse);
}

service SagaProducts {
  rpc ReserveProducts (ReserveProductsRequest) returns (ReserveProductsResponse);
  rpc ReleaseProducts (ReleaseProductsRequest) returns (ReleaseProductsResponse);
  rpc CommitProducts (CommitProductsRequest) returns (CommitProductsResponse);
}

message ReserveProductsRequest {
  int64 user_id = 1;
  repeated ProductSaga products = 2;
}

message ProductSaga {
  int64 id = 1;
  int64 quantity = 2;
}

message ReserveProductsResponse {
  bool success = 1;
  string error = 2;
}

message ReleaseProductsRequest {
  int64 user_id = 1;
  repeated Product products = 2;
}

message ReleaseProductsResponse {
  string error = 1;
}

message CommitProductsRequest {
  int64 user_id = 1;
  repeated Product products = 2;
}

message CommitProductsResponse {
  string error = 1;
  
}

message GetProductByIDRequest {
  int64 id = 1;
}

message GetProductByIDResponse {
  string error = 1;
  Product product = 2;
}

message GetProductsByIDRequest {
  repeated int64 ids = 1;
}

message GetProductsByIDResponse {
  string error = 1;
  repeated Product products = 2;
}

message Product {
  int64 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
}
