syntax = "proto3";

option go_package = "github.com/vsespontanno/eCommerce/internal/proto/products";

service Products {
    rpc GetProducts(None) returns (ProductsResponse);
    rpc GetProduct(IdRequest) returns (Product);
}

message IdRequest {
    int64 id = 1;
}

message None {
}

message ProductsResponse {
    repeated Product products = 1;
}

message Product {
    int64 id = 1;
    string name = 2;
    double price = 3;
    string description = 4;
    string category = 5;
    string brand = 6;
    int32 rating = 7;
    int32 numReviews = 8;
    int32 countInStock = 9;
}
